<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/top_pannel"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="#03A9F4"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Music Player"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/sidebar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:outlineAmbientShadowColor="@android:color/transparent"
                android:outlineSpotShadowColor="@android:color/transparent"
                android:src="@drawable/ic_baseline_sort_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_toLeftOf="@id/dots"
                android:outlineAmbientShadowColor="@android:color/transparent"
                android:outlineSpotShadowColor="@android:color/transparent"
                android:src="@drawable/ic_baseline_search_24" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:outlineAmbientShadowColor="@android:color/transparent"
                android:outlineSpotShadowColor="@android:color/transparent"
                android:src="@drawable/ic_baseline_more_vert_24" />


        </RelativeLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_pannel"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#03A9F4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabMode="scrollable"
            app:tabTextColor="#000">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/home_tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab1" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/home_tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab2" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/home_tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab3" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/home_tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab4" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/home_tab5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab5" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/home_tab6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab6" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/home_tab7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab7" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>